--- a/Correlation.html
+++ b/Correlation.html
@@ -346,13 +346,16 @@ $(document).ready(function () {
 <p>One of the first tests we can use to look at the relationship between two variables is <strong>correlation</strong>. Correlation usually requires two continuous numerical variables of some kind.</p>
 <p>The basic method for comparison between the two variables is <strong>variance</strong>, which we learned when looking at descriptive statisitics. Remember that variance is a measurement of data dispersion or spread. More specifically it refers to the average amount that data varies from the mean. So what correlation ultimately analyses is whether 2 variables <em>vary</em> in a similar way. Remember here’s the formula for variance. <span class="math display">\[
 variance(s^2)=\frac{\Sigma(x-\bar x)^2}{N-1}
-\]</span> ##Covariance</p>
+\]</span></p>
+<div id="covariance" class="section level4">
+<h4>Covariance</h4>
 <p>Since correlation is based on how two variables vary, naturally we are interested in <em>covariance</em>. Covariance is simply variance for two variables. Notice here in the formula that we’ve modified the orinigal variance formula and included our second variable <em>y</em>. So we’ve modified the exponent in the formula for x - the mean and incorporated y. <span class="math display">\[
 covariance(x,y)=\frac{\Sigma(x-\bar x)(y-\bar y)}{N-1}
 \]</span> <em>x</em> stands for our first variable and <em>y</em> stands for our second variable, so we are analyzing variance over two variables rather than just one. How does one variable deviate from the mean in comparison to how another variable deviates from the mean? If they deviate (vary) from the mean in a similar way they will be expected to be highly correlated. When there are two variables we can multiply the deviation for one variable by the devation from the second variable. If both deviations are either positive or negative this will give us a positive value, which tells us that the deviations are in the same direction (positive correlation). If the deviations go in opposite directions (one positive and one negative) this will give us a negative value (negative corrleation). Multiplying deviations of one variable by a second variable gets us the <em>cross-product deviation</em>.</p>
 <p>At this point the covariance is dependent upon the types of units used to calculate the number. However, we want to <em>standardize</em> this number, which basically means that the number will be in units that are the same across different experiments and the tools they use to measure their variables.In this case to standardize our covariance we use a calculation discussed in descriptive statistics, the <em>standard deviation</em>. This gets us what’s known as <em>Pearson’s r</em>, which was named after the person who developed the calculation Karl Pearson with Florenece Nightingale David doing a lot of the harder mathematical calculations. So hear is the formual for Pearson’s r <span class="math display">\[
 r = \frac {cov_{xy}}{s_{x}s_{y}}=\frac{\Sigma(x-\bar x)(y-\bar y)}{(N-1)s_{x}s_{y}}
-\]</span> Notice that the formula is primarily the covariance of x and y divided by the standard deviation of x and y, then this is elaborated is the longer version following the second equal sign where the standard deviation for x and y is added to our original formula for covariance.</p>
+\]</span></p>
+<p>Notice that the formula is primarily the covariance of x and y divided by the standard deviation of x and y, then this is elaborated is the longer version following the second equal sign where the standard deviation for x and y is added to our original formula for covariance.</p>
 <p>Pearon’s r or the correlational coefficient always varies between +1 and -1. As your r value moves closer to +1 that means that both variables are varying in the same direction either both increasing or both descreasing. When your r value is moving closer to -1 that indicates that both scores are varying in opposite directions or as one varible increases the other decreases.</p>
 <p>Correlation only describes relationships between variables not <em>causal</em> relationships between variables. It’s not possible to decipher which variable is doing the causal work or which variable is the independent variable and which is the dependent variable. However, correlation can still provide helpful information about variables and we can still use them to test certain types of hypotheses.</p>
 <p>To explore correlation futher, let’s look at a particular dataset. Open the dataset labeled album_sakes.csv. Use the <em>Import Dataset</em> command in the upper righthand window and let’s look at the data set.</p>
@@ -393,7 +396,8 @@ r = \frac {cov_{xy}}{s_{x}s_{y}}=\frac{\Sigma(x-\bar x)(y-\bar y)}{(N-1)s_{x}s_{
 <p>Let’s use a graph to first look at this data using a ggplot we learned earlier called a scatterplot. We’ll do a basic one first.</p>
 <pre class="r"><code>ggplot(Album_Sales, mapping = aes
        (x = Image, y = Sales)) + geom_point()</code></pre>
-<p><img src="Correlation_files/figure-html/unnamed-chunk-3-1.png" width="672" /> So notice that dots lower on the attractiveness scale tend to be associated with less sales, whereas when you look at the dots higher on the attractiveness scales their are more dots that are higher on the sales scale.</p>
+<p><img src="Correlation_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
+<p>So notice that dots lower on the attractiveness scale tend to be associated with less sales, whereas when you look at the dots higher on the attractiveness scales their are more dots that are higher on the sales scale.</p>
 <p>Another tool to help us analyze this relationshisp is a <em>regression line</em>. This is a line drawn on the graph that is closest to as many dots or points as possible. You add it like this.</p>
 <pre class="r"><code>ggplot(Album_Sales, mapping = aes
        (x = Image, y = Sales)) + geom_point() +
@@ -404,31 +408,38 @@ r = \frac {cov_{xy}}{s_{x}s_{y}}=\frac{\Sigma(x-\bar x)(y-\bar y)}{(N-1)s_{x}s_{
 <p>Let’s look at a second variable using the graph to judge which one is more correlated. Use advertising rather than attractiveness this time.</p>
 <pre class="r"><code>ggplot(Album_Sales, mapping = aes(x = Adverts, 
         y =   Sales)) + geom_point()</code></pre>
-<p><img src="Correlation_files/figure-html/unnamed-chunk-5-1.png" width="672" /> Notice how most of the dots are gathered in the middle of the graph and moving from lower left to upper right. Notice also that no points are in the bottom right hand corner. So lower sales does not appear to be related to higher amount of advertising. Let’s see the location of the regression line.</p>
+<p><img src="Correlation_files/figure-html/unnamed-chunk-5-1.png" width="672" /></p>
+<p>Notice how most of the dots are gathered in the middle of the graph and moving from lower left to upper right. Notice also that no points are in the bottom right hand corner. So lower sales does not appear to be related to higher amount of advertising. Let’s see the location of the regression line.</p>
 <pre class="r"><code>ggplot(Album_Sales, mapping = aes(x = Adverts, 
       y = Sales)) + geom_point() +
       geom_smooth(method = &#39;lm&#39;)</code></pre>
 <pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
-<p><img src="Correlation_files/figure-html/unnamed-chunk-6-1.png" width="672" /> Notice that the regression line seems slightly steeper on the adverts graph vs. the Image graph. But we can’t be totally sure. So let’s go ahead and use our Pearson’s r correlation coefficient to help us. The formula is really simple, it is just “cor” followed by the two variables you are analyzing.</p>
+<p><img src="Correlation_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
+<p>Notice that the regression line seems slightly steeper on the adverts graph vs. the Image graph. But we can’t be totally sure. So let’s go ahead and use our Pearson’s r correlation coefficient to help us. The formula is really simple, it is just “cor” followed by the two variables you are analyzing.</p>
 <pre class="r"><code>cor(Album_Sales$Sales, Album_Sales$Image)</code></pre>
 <pre><code>## [1] 0.3261111</code></pre>
 <p>Ok, so the correlation between Sales and Attractiveness is .33, now let’s look at Sales and Advertising.</p>
 <pre class="r"><code>cor(Album_Sales$Sales, Album_Sales$Adverts)</code></pre>
 <pre><code>## [1] 0.5784877</code></pre>
 <p>Notice how the corrleation has increased (meaning moved closer to + 1) from .33 to .58. This would seem to justify our hunch that their was a stronger correlation between Sales and Advertising than between Sales and Image (Looks aren’t everything apparently), based on the regression line for each graph.</p>
-<div id="how-to-use-correlations-to-test-hypotheses" class="section level1">
-<h1>How to use correlations to test hypotheses</h1>
+</div>
+<div id="how-to-use-correlations-to-test-hypotheses" class="section level3">
+<h3>How to use correlations to test hypotheses</h3>
 <p>To more formally use correlation to test a hypothesis, let’s look at another variable in the Album Sales dataset, <em>airplay</em>. This is how often a song gets played on the radio (FYI, the <em>radio</em> is an ancient device that old people used to listen to random music played using mysterious spooky radio waves). So your hypothesis would look something like:</p>
+<blockquote>
 <p>There is a correlation between the airplay an album receives and the sales for the album.</p>
+</blockquote>
 <p>The null hypothesis would simply negate the primary hypothesis:</p>
+<blockquote>
 <p>There is no correlation between the airplay an album receives and the sales for the album.</p>
+</blockquote>
 <p>To test the hypothesis we use the “cor.test” command and then specify each of the variables we are analyzing, so it looks like this:</p>
 <pre class="r"><code>cor.test(Album_Sales$Sales, Album_Sales$Airplay)</code></pre>
 <pre><code>## 
 ##  Pearson&#39;s product-moment correlation
 ## 
 ## data:  Album_Sales$Sales and Album_Sales$Airplay
-## t = 10.524, df = 198, p-value &lt; 0.00000000000000022
+## t = 10.524, df = 198, p-value &lt; 2.2e-16
 ## alternative hypothesis: true correlation is not equal to 0
 ## 95 percent confidence interval:
 ##  0.5018814 0.6810668
@@ -444,6 +455,15 @@ r = \frac {cov_{xy}}{s_{x}s_{y}}=\frac{\Sigma(x-\bar x)(y-\bar y)}{(N-1)s_{x}s_{
         geom_smooth(method = &#39;lm&#39;)</code></pre>
 <pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
 <p><img src="Correlation_files/figure-html/unnamed-chunk-10-1.png" width="672" /></p>
+<p>Here’s a second version with a few more bells and whistles. I made a different color for the scatter dots by inserting a color command and changed the size to make them a bit bigger. I did something similar with the line to make it thicker by adjusting the size and removed the CIs with the “se = FALSE” command. I also added labels through the “labs” command, make sure to use quotations around your titles and x and y descriptions.</p>
+<pre class="r"><code>ggplot(Album_Sales, mapping = aes(x = Airplay, y = Sales)) +
+        geom_point(size = 1.5, color = &quot;cornflower blue&quot;) +
+        geom_smooth(method = &#39;lm&#39;, se=FALSE, size = 1.5) + 
+        labs(title = &quot;Scatterplot of the Relationship between Airplay
+             and Sales&quot;, y = &quot;Album Sales (thousands)&quot;, 
+             x = &quot;Number of Plays on the Radio&quot;)</code></pre>
+<pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
+<p><img src="Correlation_files/figure-html/unnamed-chunk-11-1.png" width="672" /></p>
 </div>
 
 
