--- a/Intro_to_R.html
+++ b/Intro_to_R.html
@@ -12,7 +12,7 @@
 <meta name="author" content="James Van Slyke" />
 
 
-<title>Intro to R</title>
+<title>Intro to R &amp; R Studio</title>
 
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -333,7 +333,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Intro to R</h1>
+<h1 class="title toc-ignore">Intro to R &amp; R Studio</h1>
 <h4 class="author">James Van Slyke</h4>
 
 </div>
@@ -345,27 +345,31 @@ $(document).ready(function () {
 </script>
 <p><em>R</em> is the base program for R Studio, it does all the calculations, while <em>R studio</em> is the addition of several windows around R that helps with your analysis</p>
 <p>In R Studio, “R” performs calculations in the <em>console</em>. The console is in the lower left window. You can think of the console as a big calculator. You can do all the basics with R.</p>
-<p>The Editor is where you write</p>
+<p>The <em>Editor</em> is where you write the code and notes to yourself in <em>scripts</em>. The console is where you code gets entered and run and the <em>output</em> is in the lower right hand corner. The upper left hand window is the <em>environment</em> and keeps track of the data and other things used in your analysis.</p>
 <p>Here is a picture of what the program looks like and the different sections.</p>
 <p><img src="https://d33wubrfki0l68.cloudfront.net/8a64bb047429d7ae0e2acae35c40e421e6439bf6/80e5d/diagrams/rstudio-editor.png" /></p>
-<p>The <em>Editor</em> is where you write the code and notes to yourself in <em>scripts</em>. The console is where you code gets entered and run and the <em>output</em> is in the lower right hand corner. The upper left hand window is the <em>environment</em> and keeps track of the data and other things used in your analysis.</p>
 <div id="basic-calculations-using-r" class="section level3">
 <h3>Basic Calculations using R</h3>
 <p>Addition</p>
 <pre class="r"><code>x &lt;- 3 + 2
 x </code></pre>
+<pre><code>## [1] 5</code></pre>
 <p>Subtraction</p>
 <pre class="r"><code>x &lt;-  3 - 2
 x</code></pre>
+<pre><code>## [1] 1</code></pre>
 <p>Multiplication</p>
 <pre class="r"><code>x &lt;-  3 * 2
 x</code></pre>
+<pre><code>## [1] 6</code></pre>
 <p>Division</p>
 <pre class="r"><code>x &lt;-  3 / 2
 x</code></pre>
+<pre><code>## [1] 1.5</code></pre>
 <p>Exponent</p>
 <pre class="r"><code>x &lt;- 3^2
 x</code></pre>
+<pre><code>## [1] 9</code></pre>
 <p>You’ll notice that the calculations are being saved as what’s called an <em>object</em>. An object is anything you save in R that is related to data or output of a calculation. You can save calculations, databases, words or lots of other stuff.</p>
 <p>If you look in the upper right window, under the environment tab, you should notice an <em>x</em> there based on your last calculation. The environment tab saves all the saved objects you are working with in R.</p>
 <p><strong>Here’s a couple of examples of objects for you to try</strong></p>
@@ -375,17 +379,48 @@ Calculation &lt;- 3+2 </code></pre>
 <p>Notice that when you call up a calculation it gives you the answer, not the formula</p>
 <p>You can create a sequence of numbers</p>
 <pre class="r"><code>seq(1,10)</code></pre>
+<pre><code>##  [1]  1  2  3  4  5  6  7  8  9 10</code></pre>
 <p>You can repeat numbers</p>
 <pre class="r"><code>rep(10, times = 25)</code></pre>
+<pre><code>##  [1] 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10</code></pre>
 <p>And of course you can always store it in an object</p>
 <pre class="r"><code>Repeat &lt;- rep(10, times = 25)
 Repeat</code></pre>
+<pre><code>##  [1] 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10 10</code></pre>
 <p>Then you can use that to make a new database</p>
 <p>First we’ll add a sequence of numbers to match our repeat variable</p>
 <pre class="r"><code>Sequence &lt;- seq(1,25)
 Sequence</code></pre>
+<pre><code>##  [1]  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25</code></pre>
 <p>Then create a dataset using the <em>data.frame</em> command and include the two objects that were just recently created.</p>
-<pre class="r"><code>Dataset &lt;- data.frame(Repeat, Sequence)</code></pre>
+<pre class="r"><code>Dataset &lt;- data.frame(Repeat, Sequence)
+Dataset</code></pre>
+<pre><code>##    Repeat Sequence
+## 1      10        1
+## 2      10        2
+## 3      10        3
+## 4      10        4
+## 5      10        5
+## 6      10        6
+## 7      10        7
+## 8      10        8
+## 9      10        9
+## 10     10       10
+## 11     10       11
+## 12     10       12
+## 13     10       13
+## 14     10       14
+## 15     10       15
+## 16     10       16
+## 17     10       17
+## 18     10       18
+## 19     10       19
+## 20     10       20
+## 21     10       21
+## 22     10       22
+## 23     10       23
+## 24     10       24
+## 25     10       25</code></pre>
 </div>
 <div id="inspecting-data" class="section level1">
 <h1>Inspecting data</h1>
@@ -394,29 +429,59 @@ Sequence</code></pre>
 <p>It’s a longer dataset, so we’ll start with the head command that just shows the first couple of rows</p>
 <p>The top rows and columns of the dataset</p>
 <pre class="r"><code>head(iris)</code></pre>
+<pre><code>##   Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+## 1          5.1         3.5          1.4         0.2  setosa
+## 2          4.9         3.0          1.4         0.2  setosa
+## 3          4.7         3.2          1.3         0.2  setosa
+## 4          4.6         3.1          1.5         0.2  setosa
+## 5          5.0         3.6          1.4         0.2  setosa
+## 6          5.4         3.9          1.7         0.4  setosa</code></pre>
 <p>We can look at the types of data we have using the <em>str</em> command</p>
 <pre class="r"><code>str(iris)</code></pre>
+<pre><code>## &#39;data.frame&#39;:    150 obs. of  5 variables:
+##  $ Sepal.Length: num  5.1 4.9 4.7 4.6 5 5.4 4.6 5 4.4 4.9 ...
+##  $ Sepal.Width : num  3.5 3 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 ...
+##  $ Petal.Length: num  1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 1.5 ...
+##  $ Petal.Width : num  0.2 0.2 0.2 0.2 0.2 0.4 0.3 0.2 0.2 0.1 ...
+##  $ Species     : Factor w/ 3 levels &quot;setosa&quot;,&quot;versicolor&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...</code></pre>
 <p>Notice we have 2 data types, numbers and what are called “factors”</p>
 <p>Factors are typically categories of something. In this case, types of iris flowers.</p>
 <p>We can check on the names of each of our variables</p>
 <pre class="r"><code>names(iris)</code></pre>
+<pre><code>## [1] &quot;Sepal.Length&quot; &quot;Sepal.Width&quot;  &quot;Petal.Length&quot; &quot;Petal.Width&quot;  &quot;Species&quot;</code></pre>
 <p>We can look at the row names</p>
 <pre class="r"><code>rownames(iris)</code></pre>
+<pre><code>##   [1] &quot;1&quot;   &quot;2&quot;   &quot;3&quot;   &quot;4&quot;   &quot;5&quot;   &quot;6&quot;   &quot;7&quot;   &quot;8&quot;   &quot;9&quot;   &quot;10&quot;  &quot;11&quot;  &quot;12&quot; 
+##  [13] &quot;13&quot;  &quot;14&quot;  &quot;15&quot;  &quot;16&quot;  &quot;17&quot;  &quot;18&quot;  &quot;19&quot;  &quot;20&quot;  &quot;21&quot;  &quot;22&quot;  &quot;23&quot;  &quot;24&quot; 
+##  [25] &quot;25&quot;  &quot;26&quot;  &quot;27&quot;  &quot;28&quot;  &quot;29&quot;  &quot;30&quot;  &quot;31&quot;  &quot;32&quot;  &quot;33&quot;  &quot;34&quot;  &quot;35&quot;  &quot;36&quot; 
+##  [37] &quot;37&quot;  &quot;38&quot;  &quot;39&quot;  &quot;40&quot;  &quot;41&quot;  &quot;42&quot;  &quot;43&quot;  &quot;44&quot;  &quot;45&quot;  &quot;46&quot;  &quot;47&quot;  &quot;48&quot; 
+##  [49] &quot;49&quot;  &quot;50&quot;  &quot;51&quot;  &quot;52&quot;  &quot;53&quot;  &quot;54&quot;  &quot;55&quot;  &quot;56&quot;  &quot;57&quot;  &quot;58&quot;  &quot;59&quot;  &quot;60&quot; 
+##  [61] &quot;61&quot;  &quot;62&quot;  &quot;63&quot;  &quot;64&quot;  &quot;65&quot;  &quot;66&quot;  &quot;67&quot;  &quot;68&quot;  &quot;69&quot;  &quot;70&quot;  &quot;71&quot;  &quot;72&quot; 
+##  [73] &quot;73&quot;  &quot;74&quot;  &quot;75&quot;  &quot;76&quot;  &quot;77&quot;  &quot;78&quot;  &quot;79&quot;  &quot;80&quot;  &quot;81&quot;  &quot;82&quot;  &quot;83&quot;  &quot;84&quot; 
+##  [85] &quot;85&quot;  &quot;86&quot;  &quot;87&quot;  &quot;88&quot;  &quot;89&quot;  &quot;90&quot;  &quot;91&quot;  &quot;92&quot;  &quot;93&quot;  &quot;94&quot;  &quot;95&quot;  &quot;96&quot; 
+##  [97] &quot;97&quot;  &quot;98&quot;  &quot;99&quot;  &quot;100&quot; &quot;101&quot; &quot;102&quot; &quot;103&quot; &quot;104&quot; &quot;105&quot; &quot;106&quot; &quot;107&quot; &quot;108&quot;
+## [109] &quot;109&quot; &quot;110&quot; &quot;111&quot; &quot;112&quot; &quot;113&quot; &quot;114&quot; &quot;115&quot; &quot;116&quot; &quot;117&quot; &quot;118&quot; &quot;119&quot; &quot;120&quot;
+## [121] &quot;121&quot; &quot;122&quot; &quot;123&quot; &quot;124&quot; &quot;125&quot; &quot;126&quot; &quot;127&quot; &quot;128&quot; &quot;129&quot; &quot;130&quot; &quot;131&quot; &quot;132&quot;
+## [133] &quot;133&quot; &quot;134&quot; &quot;135&quot; &quot;136&quot; &quot;137&quot; &quot;138&quot; &quot;139&quot; &quot;140&quot; &quot;141&quot; &quot;142&quot; &quot;143&quot; &quot;144&quot;
+## [145] &quot;145&quot; &quot;146&quot; &quot;147&quot; &quot;148&quot; &quot;149&quot; &quot;150&quot;</code></pre>
 <p>We can create a table of a particular variable</p>
 <p>We specify the variable we want by using the $ sign</p>
 <pre class="r"><code>table(iris$Species)</code></pre>
+<pre><code>## 
+##     setosa versicolor  virginica 
+##         50         50         50</code></pre>
 <p>Notice that it automatically makes a table of the counts of each iris type</p>
 <p>Anytime we want to look at a specific variable from a dataset, we use the $ sign. Notice when you type in the dataset name followed by the $ you’ll see a little pop-up with all the variables. Just scroll through and select the one you want.</p>
 <pre class="r"><code>iris$Sepal.Width</code></pre>
-<pre><code>##   [1] 3.5 3.0 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 3.7 3.4 3.0 3.0 4.0 4.4 3.9
-##  [18] 3.5 3.8 3.8 3.4 3.7 3.6 3.3 3.4 3.0 3.4 3.5 3.4 3.2 3.1 3.4 4.1 4.2
-##  [35] 3.1 3.2 3.5 3.6 3.0 3.4 3.5 2.3 3.2 3.5 3.8 3.0 3.8 3.2 3.7 3.3 3.2
-##  [52] 3.2 3.1 2.3 2.8 2.8 3.3 2.4 2.9 2.7 2.0 3.0 2.2 2.9 2.9 3.1 3.0 2.7
-##  [69] 2.2 2.5 3.2 2.8 2.5 2.8 2.9 3.0 2.8 3.0 2.9 2.6 2.4 2.4 2.7 2.7 3.0
-##  [86] 3.4 3.1 2.3 3.0 2.5 2.6 3.0 2.6 2.3 2.7 3.0 2.9 2.9 2.5 2.8 3.3 2.7
-## [103] 3.0 2.9 3.0 3.0 2.5 2.9 2.5 3.6 3.2 2.7 3.0 2.5 2.8 3.2 3.0 3.8 2.6
-## [120] 2.2 3.2 2.8 2.8 2.7 3.3 3.2 2.8 3.0 2.8 3.0 2.8 3.8 2.8 2.8 2.6 3.0
-## [137] 3.4 3.1 3.0 3.1 3.1 3.1 2.7 3.2 3.3 3.0 2.5 3.0 3.4 3.0</code></pre>
+<pre><code>##   [1] 3.5 3.0 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 3.7 3.4 3.0 3.0 4.0 4.4 3.9 3.5
+##  [19] 3.8 3.8 3.4 3.7 3.6 3.3 3.4 3.0 3.4 3.5 3.4 3.2 3.1 3.4 4.1 4.2 3.1 3.2
+##  [37] 3.5 3.6 3.0 3.4 3.5 2.3 3.2 3.5 3.8 3.0 3.8 3.2 3.7 3.3 3.2 3.2 3.1 2.3
+##  [55] 2.8 2.8 3.3 2.4 2.9 2.7 2.0 3.0 2.2 2.9 2.9 3.1 3.0 2.7 2.2 2.5 3.2 2.8
+##  [73] 2.5 2.8 2.9 3.0 2.8 3.0 2.9 2.6 2.4 2.4 2.7 2.7 3.0 3.4 3.1 2.3 3.0 2.5
+##  [91] 2.6 3.0 2.6 2.3 2.7 3.0 2.9 2.9 2.5 2.8 3.3 2.7 3.0 2.9 3.0 3.0 2.5 2.9
+## [109] 2.5 3.6 3.2 2.7 3.0 2.5 2.8 3.2 3.0 3.8 2.6 2.2 3.2 2.8 2.8 2.7 3.3 3.2
+## [127] 2.8 3.0 2.8 3.0 2.8 3.8 2.8 2.8 2.6 3.0 3.4 3.1 3.0 3.1 3.1 3.1 2.7 3.2
+## [145] 3.3 3.0 2.5 3.0 3.4 3.0</code></pre>
 <div id="dataframes" class="section level3">
 <h3>Dataframes</h3>
 <p>Many times we work with datasets using dataframes, which creates an object very similar to a spreadsheet. Notice that when we create a dataframe and add variables to it, the letter <strong>c</strong> is used before the parentheses, which basically tells R that what follows should be added to the object/variable before it.</p>
@@ -425,6 +490,11 @@ Sequence</code></pre>
                         Numbers = c(1,2,3,4))</code></pre>
 <p>Inspect It</p>
 <pre class="r"><code>Dataframe</code></pre>
+<pre><code>##   Words Numbers
+## 1   One       1
+## 2   Two       2
+## 3 Three       3
+## 4  Four       4</code></pre>
 <p>You can also view it as a spreadsheet</p>
 <pre class="r"><code>View(Dataframe)</code></pre>
 <p>There’s actually lots of ways to make datasets and we can always import data, which we will learn later.</p>
@@ -436,13 +506,23 @@ Sequence</code></pre>
 <p><em>Integer</em> means a number that is not a fraction</p>
 <p>check it out</p>
 <pre class="r"><code>is.numeric(4.2)</code></pre>
+<pre><code>## [1] TRUE</code></pre>
 <pre class="r"><code>is.integer(4.2)</code></pre>
+<pre><code>## [1] FALSE</code></pre>
 <p><em>Characters</em> are strings or words</p>
 <p>check it out</p>
 <pre class="r"><code>is.character(&quot;Word&quot;)</code></pre>
+<pre><code>## [1] TRUE</code></pre>
 <pre class="r"><code>is.character(4)</code></pre>
+<pre><code>## [1] FALSE</code></pre>
 <p><em>Factors</em> are categories as I described earlier, it can be ordered (like an ordinal scale) or non-ordered</p>
 <pre class="r"><code>str(iris)</code></pre>
+<pre><code>## &#39;data.frame&#39;:    150 obs. of  5 variables:
+##  $ Sepal.Length: num  5.1 4.9 4.7 4.6 5 5.4 4.6 5 4.4 4.9 ...
+##  $ Sepal.Width : num  3.5 3 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 ...
+##  $ Petal.Length: num  1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 1.5 ...
+##  $ Petal.Width : num  0.2 0.2 0.2 0.2 0.2 0.4 0.3 0.2 0.2 0.1 ...
+##  $ Species     : Factor w/ 3 levels &quot;setosa&quot;,&quot;versicolor&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...</code></pre>
 </div>
 <div id="the-basic-structure-of-r-commands" class="section level1">
 <h1>The basic structure of R commands</h1>
@@ -457,11 +537,29 @@ Sequence</code></pre>
 <p><img src="https://go-bayes.github.io/psych-447/posts/2_1/syntax.png" /></p>
 <p>The function mean generates the arithmetic mean of some object</p>
 <pre class="r"><code>mean(iris$Sepal.Length)</code></pre>
+<pre><code>## [1] 5.843333</code></pre>
 <p>Or we can find the standard deviation</p>
 <pre class="r"><code>sd(iris$Sepal.Length)</code></pre>
+<pre><code>## [1] 0.8280661</code></pre>
 <p>We can also get a summary of the variable or the dataset as a whole</p>
 <pre class="r"><code>summary(iris$Sepal.Length)</code></pre>
+<pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##   4.300   5.100   5.800   5.843   6.400   7.900</code></pre>
 <pre class="r"><code>summary(iris)</code></pre>
+<pre><code>##   Sepal.Length    Sepal.Width     Petal.Length    Petal.Width   
+##  Min.   :4.300   Min.   :2.000   Min.   :1.000   Min.   :0.100  
+##  1st Qu.:5.100   1st Qu.:2.800   1st Qu.:1.600   1st Qu.:0.300  
+##  Median :5.800   Median :3.000   Median :4.350   Median :1.300  
+##  Mean   :5.843   Mean   :3.057   Mean   :3.758   Mean   :1.199  
+##  3rd Qu.:6.400   3rd Qu.:3.300   3rd Qu.:5.100   3rd Qu.:1.800  
+##  Max.   :7.900   Max.   :4.400   Max.   :6.900   Max.   :2.500  
+##        Species  
+##  setosa    :50  
+##  versicolor:50  
+##  virginica :50  
+##                 
+##                 
+## </code></pre>
 </div>
 <div id="packages" class="section level1">
 <h1>Packages</h1>
